gen/MiniJavaParser.py
# Generated from /Users/Philo/Documents/PyCharm/MiniJava/MiniJava.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String[]'", "')'", "'}'", 
                     "'extends'", "';'", "','", "'return'", "'int[]'", "'boolean'", 
                     "'int'", "'if'", "'else'", "'while'", "'System.out.println'", 
                     "'='", "'['", "']'", "'&&'", "'<'", "'+'", "'-'", "'*'", 
                     "'.'", "'length'", "'this'", "'new'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDENTIFIER", 
                      "BOOLEAN", "INTEGER", "WS", "LINE_COMMENT", "COMMENT" ]

    RULE_goal = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_expression = 7

    ruleNames =  [ "goal", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type", "statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    IDENTIFIER=35
    BOOLEAN=36
    INTEGER=37
    WS=38
    LINE_COMMENT=39
    COMMENT=40

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MiniJavaParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.mainClass()
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__0:
                self.state = 17
                self.classDeclaration()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.IDENTIFIER)
            else:
                return self.getToken(MiniJavaParser.IDENTIFIER, i)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(MiniJavaParser.T__0)
            self.state = 26
            self.match(MiniJavaParser.IDENTIFIER)
            self.state = 27
            self.match(MiniJavaParser.T__1)
            self.state = 28
            self.match(MiniJavaParser.T__2)
            self.state = 29
            self.match(MiniJavaParser.T__3)
            self.state = 30
            self.match(MiniJavaParser.T__4)
            self.state = 31
            self.match(MiniJavaParser.T__5)
            self.state = 32
            self.match(MiniJavaParser.T__6)
            self.state = 33
            self.match(MiniJavaParser.T__7)
            self.state = 34
            self.match(MiniJavaParser.IDENTIFIER)
            self.state = 35
            self.match(MiniJavaParser.T__8)
            self.state = 36
            self.match(MiniJavaParser.T__1)
            self.state = 37
            self.statement()
            self.state = 38
            self.match(MiniJavaParser.T__9)
            self.state = 39
            self.match(MiniJavaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.IDENTIFIER)
            else:
                return self.getToken(MiniJavaParser.IDENTIFIER, i)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(MiniJavaParser.T__0)
            self.state = 42
            self.match(MiniJavaParser.IDENTIFIER)
            self.state = 45
            _la = self._input.LA(1)
            if _la==MiniJavaParser.T__10:
                self.state = 43
                self.match(MiniJavaParser.T__10)
                self.state = 44
                self.match(MiniJavaParser.IDENTIFIER)


            self.state = 47
            self.match(MiniJavaParser.T__1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__14) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 48
                self.varDeclaration()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__2:
                self.state = 54
                self.methodDeclaration()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(MiniJavaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type(self):
            return self.getTypedRuleContext(MiniJavaParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MiniJavaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.type()
            self.state = 63
            self.match(MiniJavaParser.IDENTIFIER)
            self.state = 64
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.TypeContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.TypeContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.IDENTIFIER)
            else:
                return self.getToken(MiniJavaParser.IDENTIFIER, i)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(MiniJavaParser.T__2)
            self.state = 67
            self.type()
            self.state = 68
            self.match(MiniJavaParser.IDENTIFIER)
            self.state = 69
            self.match(MiniJavaParser.T__6)
            self.state = 81
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__14) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 70
                self.type()
                self.state = 71
                self.match(MiniJavaParser.IDENTIFIER)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniJavaParser.T__12:
                    self.state = 72
                    self.match(MiniJavaParser.T__12)
                    self.state = 73
                    self.type()
                    self.state = 74
                    self.match(MiniJavaParser.IDENTIFIER)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 83
            self.match(MiniJavaParser.T__8)
            self.state = 84
            self.match(MiniJavaParser.T__1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.varDeclaration() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                self.state = 91
                self.statement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MiniJavaParser.T__13)
            self.state = 98
            self.expression(0)
            self.state = 99
            self.match(MiniJavaParser.T__11)
            self.state = 100
            self.match(MiniJavaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniJavaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = MiniJavaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__14) | (1 << MiniJavaParser.T__15) | (1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.IDENTIFIER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def IDENTIFIER(self):
            return self.getToken(MiniJavaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 145
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MiniJavaParser.T__1)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.T__19) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.IDENTIFIER))) != 0):
                    self.state = 105
                    self.statement()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self.match(MiniJavaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MiniJavaParser.T__17)
                self.state = 113
                self.match(MiniJavaParser.T__6)
                self.state = 114
                self.expression(0)
                self.state = 115
                self.match(MiniJavaParser.T__8)
                self.state = 116
                self.statement()
                self.state = 117
                self.match(MiniJavaParser.T__18)
                self.state = 118
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(MiniJavaParser.T__19)
                self.state = 121
                self.match(MiniJavaParser.T__6)
                self.state = 122
                self.expression(0)
                self.state = 123
                self.match(MiniJavaParser.T__8)
                self.state = 124
                self.statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.match(MiniJavaParser.T__20)
                self.state = 127
                self.match(MiniJavaParser.T__6)
                self.state = 128
                self.expression(0)
                self.state = 129
                self.match(MiniJavaParser.T__8)
                self.state = 130
                self.match(MiniJavaParser.T__11)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.match(MiniJavaParser.IDENTIFIER)
                self.state = 133
                self.match(MiniJavaParser.T__21)
                self.state = 134
                self.expression(0)
                self.state = 135
                self.match(MiniJavaParser.T__11)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.match(MiniJavaParser.IDENTIFIER)
                self.state = 138
                self.match(MiniJavaParser.T__22)
                self.state = 139
                self.expression(0)
                self.state = 140
                self.match(MiniJavaParser.T__23)
                self.state = 141
                self.match(MiniJavaParser.T__21)
                self.state = 142
                self.expression(0)
                self.state = 143
                self.match(MiniJavaParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def INTEGER(self):
            return self.getToken(MiniJavaParser.INTEGER, 0)

        def BOOLEAN(self):
            return self.getToken(MiniJavaParser.BOOLEAN, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniJavaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniJavaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(MiniJavaParser.T__33)
                self.state = 149
                self.expression(2)
                pass

            elif la_ == 2:
                self.state = 150
                self.match(MiniJavaParser.INTEGER)
                pass

            elif la_ == 3:
                self.state = 151
                self.match(MiniJavaParser.BOOLEAN)
                pass

            elif la_ == 4:
                self.state = 152
                self.match(MiniJavaParser.IDENTIFIER)
                pass

            elif la_ == 5:
                self.state = 153
                self.match(MiniJavaParser.T__31)
                pass

            elif la_ == 6:
                self.state = 154
                self.match(MiniJavaParser.T__32)
                self.state = 155
                self.match(MiniJavaParser.T__16)
                self.state = 156
                self.match(MiniJavaParser.T__22)
                self.state = 157
                self.expression(0)
                self.state = 158
                self.match(MiniJavaParser.T__23)
                pass

            elif la_ == 7:
                self.state = 160
                self.match(MiniJavaParser.T__32)
                self.state = 161
                self.match(MiniJavaParser.IDENTIFIER)
                self.state = 162
                self.match(MiniJavaParser.T__6)
                self.state = 163
                self.match(MiniJavaParser.T__8)
                pass

            elif la_ == 8:
                self.state = 164
                self.match(MiniJavaParser.T__6)
                self.state = 165
                self.expression(0)
                self.state = 166
                self.match(MiniJavaParser.T__8)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 198
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 196
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = MiniJavaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 170
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 171
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__24) | (1 << MiniJavaParser.T__25) | (1 << MiniJavaParser.T__26) | (1 << MiniJavaParser.T__27) | (1 << MiniJavaParser.T__28))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 172
                        self.expression(13)
                        pass

                    elif la_ == 2:
                        localctx = MiniJavaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 173
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 174
                        self.match(MiniJavaParser.T__22)
                        self.state = 175
                        self.expression(0)
                        self.state = 176
                        self.match(MiniJavaParser.T__23)
                        pass

                    elif la_ == 3:
                        localctx = MiniJavaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 178
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 179
                        self.match(MiniJavaParser.T__29)
                        self.state = 180
                        self.match(MiniJavaParser.T__30)
                        pass

                    elif la_ == 4:
                        localctx = MiniJavaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 181
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 182
                        self.match(MiniJavaParser.T__29)
                        self.state = 183
                        self.match(MiniJavaParser.IDENTIFIER)
                        self.state = 184
                        self.match(MiniJavaParser.T__6)
                        self.state = 193
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__6) | (1 << MiniJavaParser.T__31) | (1 << MiniJavaParser.T__32) | (1 << MiniJavaParser.T__33) | (1 << MiniJavaParser.IDENTIFIER) | (1 << MiniJavaParser.BOOLEAN) | (1 << MiniJavaParser.INTEGER))) != 0):
                            self.state = 185
                            self.expression(0)
                            self.state = 190
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==MiniJavaParser.T__12:
                                self.state = 186
                                self.match(MiniJavaParser.T__12)
                                self.state = 187
                                self.expression(0)
                                self.state = 192
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 195
                        self.match(MiniJavaParser.T__8)
                        pass

             
                self.state = 200
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 9)
         




